20250525 feat: JPA 2편 섹션 3 강의 듣고 필기 완료